--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,3 @@
 {
-  "recommendations": [
-    "Vue.volar",
-    "vitest.explorer",
-    "dbaeumer.vscode-eslint",
-    "EditorConfig.EditorConfig",
-    "esbenp.prettier-vscode"
-  ]
+  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
 }
