--- a/package.json
+++ b/package.json
@@ -1,52 +1,48 @@
 {
-  "homepage": "https://minhluu-pionero.github.io/admin-ec-app-vue3/",
-  "name": "-",
+  "name": "longtran",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "predeploy": "bun run build && echo > build/.nojekyll",
-    "deploy": "gh-pages -d build",
+    "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.2.6",
-    "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "@tanstack/vue-query": "^5.62.2",
+    "pinia": "^2.1.4",
+    "vee-validate": "^4.14.7",
+    "vue": "^3.3.4",
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.5",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.9.3",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vitest/eslint-plugin": "1.1.10",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
-    "@vue/test-utils": "^2.4.6",
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.17.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.7.0",
-    "cypress": "^13.16.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-cypress": "^4.1.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "gh-pages": "^6.2.0",
-    "jsdom": "^25.0.1",
-    "npm-run-all2": "^7.0.1",
-    "prettier": "^3.3.3",
-    "start-server-and-test": "^2.0.8",
-    "typescript": "~5.6.3",
-    "vite": "^6.0.1",
-    "vite-plugin-vue-devtools": "^7.6.5",
-    "vitest": "^2.1.5",
-    "vue-tsc": "^2.1.10"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.45.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.49",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.4.16",
+    "typescript": "~5.1.6",
+    "vite": "^6.0.2",
+    "vitest": "^0.33.0",
+    "vue-tsc": "^1.8.6"
   }
 }
