--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "@tanstack/vue-query": "^5.62.2",
+    "autoprefixer": "^10.4.20",
     "pinia": "^2.2.6",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
@@ -45,7 +52,7 @@
     "start-server-and-test": "^2.0.8",
     "typescript": "~5.6.3",
     "vite": "^6.0.1",
-    "vite-plugin-vue-devtools": "^7.6.5",
+    "vite-plugin-vue-devtools": "^7.6.7",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
   }
