--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdi/font": "^7.4.47",
     "@tanstack/vue-query": "^5.62.2",
     "autoprefixer": "^10.4.20",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.2.6",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
