--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "autoprefixer": "^10.4.20",
     "pinia": "^2.2.6",
     "postcss": "^8.4.49",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
     "tailwindcss": "^3.4.16",
     "vee-validate": "^4.14.7",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "^3.7.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
